fix clients max height on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -812,7 +812,6 @@ a:active {
 
     .clients {
         width: 100%;
-        max-height: 200px;
         justify-content: center;
         gap: 20px;
     }
